--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -132,7 +132,7 @@ body {
   background-color: #7237a2 !important;
 }
 .bg-warning {
-  background-color: #f6660f !important;
+  background-color: #ff03ad !important;
 }
 .bg-danger {
   background-color: #cccccc !important;
@@ -232,25 +232,25 @@ body {
 .btn-warning,
 .btn-warning:active,
 .btn-warning.active {
-  background-color: #f6660f !important;
-  border-color: #f6660f !important;
+  background-color: #ff03ad !important;
+  border-color: #ff03ad !important;
   color: #ffffff !important;
 }
 .btn-warning:hover,
 .btn-warning:focus,
 .btn-warning.focus {
   color: #ffffff !important;
-  background-color: #f6660f !important;
-  border-color: #f6660f !important;
+  background-color: #ff03ad !important;
+  border-color: #ff03ad !important;
 }
 .btn-warning:before {
-  background-color: #b24707 !important;
+  background-color: #b5007a !important;
 }
 .btn-warning.disabled,
 .btn-warning:disabled {
   color: #ffffff !important;
-  background-color: #b24707 !important;
-  border-color: #b24707 !important;
+  background-color: #b5007a !important;
+  border-color: #b5007a !important;
 }
 .btn-danger,
 .btn-danger:active,
@@ -416,23 +416,23 @@ body {
 .btn-warning-outline:active,
 .btn-warning-outline.active {
   background: none;
-  border-color: #993d06;
-  color: #993d06;
+  border-color: #9c0069;
+  color: #9c0069;
 }
 .btn-warning-outline:hover,
 .btn-warning-outline:focus,
 .btn-warning-outline.focus {
   color: #ffffff;
-  border-color: #f6660f;
+  border-color: #ff03ad;
 }
 .btn-warning-outline:before {
-  background-color: #f6660f;
+  background-color: #ff03ad;
 }
 .btn-warning-outline.disabled,
 .btn-warning-outline:disabled {
   color: #ffffff !important;
-  background-color: #f6660f !important;
-  border-color: #f6660f !important;
+  background-color: #ff03ad !important;
+  border-color: #ff03ad !important;
 }
 .btn-danger-outline,
 .btn-danger-outline:active,
@@ -550,7 +550,7 @@ body {
   color: #7237a2 !important;
 }
 .text-warning {
-  color: #f6660f !important;
+  color: #ff03ad !important;
 }
 .text-danger {
   color: #cccccc !important;
@@ -579,7 +579,7 @@ a.text-info:focus {
 }
 a.text-warning:hover,
 a.text-warning:focus {
-  color: #993d06 !important;
+  color: #9c0069 !important;
 }
 a.text-danger:hover,
 a.text-danger:focus {
@@ -600,7 +600,7 @@ a.text-black:focus {
   background-color: #7237a2;
 }
 .alert-warning {
-  background-color: #f6660f;
+  background-color: #ff03ad;
 }
 .alert-danger {
   background-color: #cccccc;
@@ -637,7 +637,7 @@ a:hover {
 }
 .mbr-plan-header.bg-warning .mbr-plan-subtitle,
 .mbr-plan-header.bg-warning .mbr-plan-price-desc {
-  color: #fde3d4;
+  color: #ffcfef;
 }
 .mbr-plan-header.bg-danger .mbr-plan-subtitle,
 .mbr-plan-header.bg-danger .mbr-plan-price-desc {
@@ -892,7 +892,7 @@ body {
 }
 .cid-rZhVXsuPau .navbar {
   padding: 0.5rem 0;
-  background: #f6660f;
+  background: #ffffff;
   transition: none;
   min-height: 50px;
 }
@@ -936,7 +936,7 @@ body {
   transition: font-size 0.25s;
 }
 .cid-rZhVXsuPau .menu-content-top {
-  background: #0a1c44;
+  background: #ff03ad;
   max-width: 100%;
   display: none;
   -webkit-justify-content: left;
@@ -962,10 +962,10 @@ body {
   color: #2c1616 !important;
 }
 .cid-rZhVXsuPau .dropdown-menu {
-  background-color: #f67a0f;
+  background-color: #ff03ad;
 }
 .cid-rZhVXsuPau .dropdown-item:active {
-  background-color: #f67a0f;
+  background-color: #ff03ad;
 }
 .cid-rZhVXsuPau .menu-bottom {
   margin: auto;
@@ -978,7 +978,7 @@ body {
   justify-content: flex-end;
 }
 .cid-rZhVXsuPau .navbar-dropdown.bg-color.transparent.opened {
-  background: #f6660f;
+  background: #ffffff;
 }
 .cid-rZhVXsuPau .nav-item span {
   padding-right: 0.4em;
@@ -1280,7 +1280,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #0a1c44;
+  background-color: #2c1616;
 }
 .cid-rZhVXsuPau button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1427,10 +1427,10 @@ body {
 @media (min-width: 991px) {
   .cid-rZhVXsuPau .dropdown-item {
     color: white !important;
-    border-bottom: 0px solid #4f5b77;
+    border-bottom: 0px solid #2c1616;
   }
   .cid-rZhVXsuPau .dropdown-item:not(:last-child) {
-    border-bottom: 1px solid #4f5b77;
+    border-bottom: 1px solid #2c1616;
   }
 }
 @media (max-width: 991px) {
@@ -1562,7 +1562,7 @@ body {
 }
 .cid-rZhVXsuPau .widget-title,
 .cid-rZhVXsuPau .widget-icon {
-  color: #e9e9e9;
+  color: #ffffff;
 }
 .cid-rZhVXsuPau .widget-text {
   color: #656565;
@@ -1606,7 +1606,7 @@ body {
   }
 }
 .cid-rZhWVLnF9C {
-  background-color: #f6660f;
+  background-color: #ff03ad;
 }
 .cid-rZhWVLnF9C .img-wrap {
   width: 100% !important;
@@ -1752,7 +1752,7 @@ body {
 }
 .cid-rZj7JAxz0W .table-wrap:hover {
   transition: all 0.3s ease-in-out;
-  background-color: #555555;
+  background-color: #ff03ad;
 }
 .cid-rZj7JAxz0W .table-wrap:hover .table-pricing,
 .cid-rZj7JAxz0W .table-wrap:hover .table-icon {
@@ -1832,7 +1832,7 @@ body {
 }
 .cid-rZj7JAxz0W .table-pricing,
 .cid-rZj7JAxz0W .table-icon {
-  color: #f6660f;
+  color: #ff03ad;
 }
 .cid-rZj7NpDh4v {
   padding-top: 90px;
@@ -1896,7 +1896,7 @@ body {
   right: 0;
   position: absolute;
   display: inline-block;
-  background-color: #f6660f !important;
+  background-color: #e739ae !important;
   transition: all 0.3s ease-in-out 0s;
   border-radius: 50%;
   color: #ffffff;
@@ -1912,7 +1912,7 @@ body {
   transition: all 0.3s ease-in-out 0s;
 }
 .cid-rZj7NpDh4v .icon-main:hover .icon-wrapper {
-  background-color: #f6660f !important;
+  background-color: #e739ae !important;
 }
 .cid-rZj7NpDh4v .icon-main:hover .icon-number {
   background-color: #232323 !important;
@@ -2159,13 +2159,13 @@ body {
   color: #00bea3;
 }
 .cid-rZj8SqQS4Y .img2 {
-  color: #f1894c;
+  color: #ff03ad;
 }
 .cid-rZj8SqQS4Y .line {
   width: 35px;
   height: 3px;
   display: inline-block;
-  background: #f1894c;
+  background: #ff03ad;
   transition: background 0.3s;
   margin-bottom: 2rem;
 }
@@ -2207,7 +2207,7 @@ body {
 }
 .cid-rZhVXsuPau .navbar {
   padding: 0.5rem 0;
-  background: #f6660f;
+  background: #ffffff;
   transition: none;
   min-height: 50px;
 }
@@ -2251,7 +2251,7 @@ body {
   transition: font-size 0.25s;
 }
 .cid-rZhVXsuPau .menu-content-top {
-  background: #0a1c44;
+  background: #ff03ad;
   max-width: 100%;
   display: none;
   -webkit-justify-content: left;
@@ -2277,10 +2277,10 @@ body {
   color: #2c1616 !important;
 }
 .cid-rZhVXsuPau .dropdown-menu {
-  background-color: #f67a0f;
+  background-color: #ff03ad;
 }
 .cid-rZhVXsuPau .dropdown-item:active {
-  background-color: #f67a0f;
+  background-color: #ff03ad;
 }
 .cid-rZhVXsuPau .menu-bottom {
   margin: auto;
@@ -2293,7 +2293,7 @@ body {
   justify-content: flex-end;
 }
 .cid-rZhVXsuPau .navbar-dropdown.bg-color.transparent.opened {
-  background: #f6660f;
+  background: #ffffff;
 }
 .cid-rZhVXsuPau .nav-item span {
   padding-right: 0.4em;
@@ -2595,7 +2595,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #0a1c44;
+  background-color: #2c1616;
 }
 .cid-rZhVXsuPau button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2742,10 +2742,10 @@ body {
 @media (min-width: 991px) {
   .cid-rZhVXsuPau .dropdown-item {
     color: white !important;
-    border-bottom: 0px solid #4f5b77;
+    border-bottom: 0px solid #2c1616;
   }
   .cid-rZhVXsuPau .dropdown-item:not(:last-child) {
-    border-bottom: 1px solid #4f5b77;
+    border-bottom: 1px solid #2c1616;
   }
 }
 @media (max-width: 991px) {
@@ -2877,7 +2877,7 @@ body {
 }
 .cid-rZhVXsuPau .widget-title,
 .cid-rZhVXsuPau .widget-icon {
-  color: #e9e9e9;
+  color: #ffffff;
 }
 .cid-rZhVXsuPau .widget-text {
   color: #656565;
@@ -2901,7 +2901,7 @@ body {
 .cid-rZk2UsMdif {
   padding-top: 225px;
   padding-bottom: 225px;
-  background-image: url("../../../assets/images/background45.jpg");
+  background-image: url("../../../assets/images/background46.jpg");
 }
 .cid-rZk2UsMdif .mbr-section-subtitle ul {
   list-style-type: none;
@@ -3091,7 +3091,7 @@ body {
   background-color: #ffffff;
 }
 .cid-rZk3I9Vee4 .icon-block-top span {
-  background-color: #2c1616;
+  background-color: #ff03ad;
   padding: 1.5rem;
   position: absolute;
   border-radius: 50%;
@@ -3381,71 +3381,71 @@ body {
 .cid-rZk4N9WDX4 .mbr-text {
   color: #767676;
 }
-.cid-rZk6A36bHB {
+.cid-rZm052vE0H {
   padding-top: 75px;
   padding-bottom: 75px;
   background-color: #36404c;
 }
-.cid-rZk6A36bHB section {
+.cid-rZm052vE0H section {
   position: relative;
 }
-.cid-rZk6A36bHB h4 {
+.cid-rZm052vE0H h4 {
   margin: 0;
 }
-.cid-rZk6A36bHB img {
+.cid-rZm052vE0H img {
   height: 100px;
   padding-rigth: 8px;
 }
-.cid-rZk6A36bHB a {
+.cid-rZm052vE0H a {
   font-weight: 300;
 }
-.cid-rZk6A36bHB .img1 {
+.cid-rZm052vE0H .img1 {
   color: #00bea3;
 }
-.cid-rZk6A36bHB .img2 {
-  color: #f1894c;
+.cid-rZm052vE0H .img2 {
+  color: #ff03ad;
 }
-.cid-rZk6A36bHB .line {
+.cid-rZm052vE0H .line {
   width: 35px;
   height: 3px;
   display: inline-block;
-  background: #f1894c;
+  background: #ff03ad;
   transition: background 0.3s;
   margin-bottom: 2rem;
 }
-.cid-rZk6A36bHB .media-wrap {
+.cid-rZm052vE0H .media-wrap {
   display: flex;
   margin-bottom: 1rem;
   align-items: center;
 }
 @media (max-width: 992px) {
-  .cid-rZk6A36bHB .content > div:not(:last-child) {
+  .cid-rZm052vE0H .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
-.cid-rZk6A36bHB .item,
-.cid-rZk6A36bHB .link {
+.cid-rZm052vE0H .item,
+.cid-rZm052vE0H .link {
   display: flex;
   align-items: center;
   padding-bottom: 0.5rem;
   margin-bottom: 0.6rem;
 }
-.cid-rZk6A36bHB .item h4,
-.cid-rZk6A36bHB .link h4 {
+.cid-rZm052vE0H .item h4,
+.cid-rZm052vE0H .link h4 {
   padding-left: 10px;
   margin: 0;
 }
-.cid-rZk6A36bHB .card-img {
+.cid-rZm052vE0H .card-img {
   width: auto;
 }
-.cid-rZk6A36bHB .link {
+.cid-rZm052vE0H .link {
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 @media (max-width: 767px) {
-  .cid-rZk6A36bHB .item {
+  .cid-rZm052vE0H .item {
     justify-content: center;
   }
 }
-.cid-rZk6A36bHB .item-title {
+.cid-rZm052vE0H .item-title {
   color: #c1c1c1;
 }
