create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1606,7 +1606,7 @@ body {
   }
 }
 .cid-rZhWVLnF9C {
-  background-color: #ff03ad;
+  background-color: #ff1e93;
 }
 .cid-rZhWVLnF9C .img-wrap {
   width: 100% !important;
@@ -1896,7 +1896,7 @@ body {
   right: 0;
   position: absolute;
   display: inline-block;
-  background-color: #e739ae !important;
+  background-color: #ff03ad !important;
   transition: all 0.3s ease-in-out 0s;
   border-radius: 50%;
   color: #ffffff;
@@ -1912,7 +1912,7 @@ body {
   transition: all 0.3s ease-in-out 0s;
 }
 .cid-rZj7NpDh4v .icon-main:hover .icon-wrapper {
-  background-color: #e739ae !important;
+  background-color: #ff03ad !important;
 }
 .cid-rZj7NpDh4v .icon-main:hover .icon-number {
   background-color: #232323 !important;
@@ -2901,7 +2901,7 @@ body {
 .cid-rZk2UsMdif {
   padding-top: 225px;
   padding-bottom: 225px;
-  background-image: url("../../../assets/images/background47.jpg");
+  background-image: url("../../../assets/images/background48.jpg");
 }
 .cid-rZk2UsMdif .mbr-section-subtitle ul {
   list-style-type: none;
